--- a/client/app.html
+++ b/client/app.html
@@ -9,6 +9,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
   <!-- iOS Web Clip -->
   <link rel="apple-touch-icon" href="assets/images/favicon.png">
